--- a/src/zeit/web/site/templates/inc/comments/report-comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/report-comment-form.html
@@ -3,7 +3,7 @@
 		<textarea name="comment" placeholder="Warum halten Sie diesen Kommentar für bedenklich?" class="comment-form__textarea js-required"></textarea>
 		<p class="comment-form__text">
 			Nutzen Sie dieses Fenster, um Verstöße gegen die <a target="_blank" href="//administratives/2010-03/netiquette">Netiquette</a> zu melden.
-			Wenn Sie einem Kommentar inhaltlich widersprechen möchten, <a href="#js-comments-form" class="js-scroll">nutzen Sie das Kommentarformular</a> und beteiligen Sie sich an der Diskussion.
+			Wenn Sie einem Kommentar inhaltlich widersprechen möchten, <a href="#comments-form">nutzen Sie das Kommentarformular</a> und beteiligen Sie sich an der Diskussion.
 		</p>
 		<p class="comment-form__actions">
 			<input type="hidden" name="action" value="report">
