ZON-1764: Styling for video single page (commit includes FAILING tests)

--- a/sass/web.site/modules/article/_article-heading.sass
+++ b/sass/web.site/modules/article/_article-heading.sass
@@ -8,6 +8,8 @@
 		padding-bottom: remify(17px)
 		+respond-min($break-desktop-min)
 			font-size: remify(14px)
+		&--on-dark-background
+			color: $zon_mid_grey
 	&__title
 		color: $zon-charcoal
 		display: block
@@ -15,6 +17,8 @@
 		line-height: 1.2
 		+respond-min($break-desktop-min)
 			font-size: remify(42px)
+		&--on-dark-background
+			color: $zon_lighter_grey
 	&__colon
 		+visuallyhidden
 
