FIX: Deliver a vgwort pixel

--- a/src/zeit/web/magazin/templates/layout.html
+++ b/src/zeit/web/magazin/templates/layout.html
@@ -209,5 +209,10 @@
 
         <!-- handler for wrapper app modifications -->
         {{lama_core.wrapper_handling( view )}}
+        {% if view.vgwort_url %}
+        <!--start: vgwort-->
+            <img src="{{ view.vgwort_url }}" width="1" height="1" alt="" id="vgwort_pixel">
+        <!--end: vgwort--> 
+        {% endif %}
     </body>
 </html>
