ZON-1764: adjust some tests, apply PR feedback to the code (still failing tests left)

--- a/sass/web.site/modules/article/_article-heading.sass
+++ b/sass/web.site/modules/article/_article-heading.sass
@@ -8,7 +8,7 @@
 		padding-bottom: remify(17px)
 		+respond-min($break-desktop-min)
 			font-size: remify(14px)
-		&--on-dark-background
+		&--on-video-article
 			color: $zon_mid_grey
 	&__title
 		color: $zon-charcoal
@@ -17,7 +17,7 @@
 		line-height: 1.2
 		+respond-min($break-desktop-min)
 			font-size: remify(42px)
-		&--on-dark-background
+		&--on-video-article
 			color: $zon_lighter_grey
 	&__colon
 		+visuallyhidden
