ZON-1832: fix beta-notice display with dropdown

--- a/sass/web.site/modules/_nav.sass
+++ b/sass/web.site/modules/_nav.sass
@@ -345,6 +345,7 @@ $zon-search-square-size: remify(35px)
 	+order(25)
 	background: $color-body-bg
 	color: $zon_mid_grey
+	display: none
 	padding: remify(16px)
 	text-align: center 
 	+respond-min($break-tablet-min)
