--- a/src/zeit/web/site/templates/inc/navigation/login-state.html
+++ b/src/zeit/web/site/templates/inc/navigation/login-state.html
@@ -1,18 +1,24 @@
-<!-- {% if user %}
-    {% if user.picture %}
-        <span>{{ user.picture }}</span>
-    {% endif %}
+{% if user %}
+<div class="login-state" data-feature="dropdown">
+    <a href="{{ logout }}" class="login-state__name">{{ user.name }}</a>
+    <ul class="dropdown">
+        <li class="dropdown__item">
+            <a href="{{ profile }}" class="dropdown__link">Profil</a>
+            <a href="{{ logout }}" class="dropdown__link">Abmelden</a>
+        </li>
+    </ul>
+</div>
+<div class="login-state-mobile">
+    {% if user.picture %}<img class="login-state-mobile__avatar" alt="Avatarbild von {{ user.name }}" src="{{ user.picture }}">{% endif %}
+    <span class="login-state-mobile__name {% if user.picture %}login-state-mobile__name--with-image{% endif %}">{{ user.name }}</span>
+    <a href="{{ logoff }}" rel="nofollow" class="login-state-mobile__logoff">
+        <span>Abmelden</span>
+        <span class="login-state-mobile__icon icon-zon-logo-navigation_login"></span>
+    </a>
+</div>
 {% else %}
-<a href="{{ login }}" rel="nofollow" class="user-link esi-include-link" id="drupal_login">
+<a href="{{ login }}" rel="nofollow" class="user-link" id="drupal_login">
     <span class="main_nav__community__image icon-zon-logo-navigation_login"></span>
     Anmelden
 </a>
-{% endif %} -->
-
-<a href="{{ logoff }}" rel="nofollow" class="user-link user-link--logged-in" id="drupal_login"><span>{{ user.name }}</span></a>
-<ul class="dropdown">
-    <li class="login-dropdown">
-        <img class="login-dropdown__avatar" alt="Avatarbild von {{ user.name }}" src="{{ user.picture }}">
-        <span class="login-dropdown__name">{{ user.name }}</span>
-    </li>
-</ul>
+{% endif %}
