--- a/sass/web.site/modules/video/_video-player.sass
+++ b/sass/web.site/modules/video/_video-player.sass
@@ -1,8 +1,8 @@
-
-// TODO: this is (currently) only the player on the video single page. Should we name it accordingly ?
+// enable video iframes to be full-width inside the article
+// (solution copied from ZMO zeit.web/sass/web.magazin/modules/_video.sass).
+// This is used for video stages ("Videoriegel" on home page) and video single pages.
 .video-player
 	position: relative
-	width: 100%
 	&:after
 		content: ''
 		display: block
@@ -17,14 +17,3 @@
 		right: 0
 		top: 0
 		width: 100%
-	// TODO: wording
-	&--expanded
-		margin: 0 (-$page-padding) // "overwrite" padding of the parent container
-		width: auto
-	// TODO: override of override of override ...
-	+respond-min($break-tablet-min)
-		max-width: remify($break-tablet-min)
-		margin-left: auto
-		margin-right: auto
-		margin-top: $big
-		margin-bottom: $big
