No one destroyed my CSS

--- a/sass/web.site/modules/liveblog/_wrapper.sass
+++ b/sass/web.site/modules/liveblog/_wrapper.sass
@@ -41,5 +41,5 @@
 		border-bottom-color: rgba($color-link--hover, .5)
 
 // XXX this is a fake solution for the fake header image
-.article__item--wide
+.liveblog-text-wrapper .article__item--wide
 	display: none !important
