ZON-1764: Update template

--- a/src/zeit/web/site/templates/content.html
+++ b/src/zeit/web/site/templates/content.html
@@ -46,7 +46,7 @@
                     {% endif %}
                 </div>
                 <div class="metadata">
-                    {% include "zeit.web.site:templates/inc/article/metadata.tpl" ignore missing %}
+                    {% include "zeit.web.site:templates/inc/article/metadata.tpl" %}
                 </div>
                 {% endif %}
             </div>
