--- a/sass/web.site/modules/article/_article-interactions.sass
+++ b/sass/web.site/modules/article/_article-interactions.sass
@@ -5,13 +5,10 @@
 .sharing-menu
 	font-size: remify(14px)
 	font-family: $font-tabletgothic
-	&--inline
-		display: inline
 	&__title
 		color: $zon_grey
 		cursor: pointer
 		letter-spacing: 0.04em
-		white-space: nowrap // prevent the drop_icon from being put into a new line
 		+on-interaction
 			color: $zon_dark_grey
 		&:after
@@ -69,10 +66,7 @@
 	max-height: remify(64px) // animated
 
 // The sharing menu appears on pages with dark background (video single page)
-.sharing-menu--on-video-article
-	.sharing-menu__title
-		color: $zon_mid_grey
-		+on-interaction
-			color: $zon_light_grey
+.sharing-menu--video
+	display: inline
 	&.sharing-menu--active > .sharing-menu__title
 		color: $zon_light_grey
