--- a/src/zeit/web/site/templates/video.html
+++ b/src/zeit/web/site/templates/video.html
@@ -13,41 +13,22 @@
 
         {{ vima.brightcove_video_tag(view.context.__name__, iframe=True, expanded=True) }}
 
-        <div class="article__item">
-            <h1 class="article-heading" itemprop="headline">
-                <span class="article-heading__kicker article-heading__kicker--on-video-article">{{ view.supertitle | hide_none  }}</span>
-                <span class="article-heading__colon">: </span>
-                <span class="article-heading__title article-heading__title--on-video-article">{{ view.title | hide_none }}</span>
-            </h1>
-        </div>
+        {{ self.schema_org_image_info() }}
+        {{ self.article_heading() }}
 
         <div class="article__item">
-            <div class="video-article-summary" itemprop="description">
+            <div class="summary" itemprop="description">
                 {{ view.subtitle | hide_none }}
             </div>
-            <div class="video-article-metadata">
+            <div class="metadata">
+                {% include "zeit.web.site:templates/inc/article/metadata.tpl" %}
 
-                {% if view.source_label -%}
-                    <span class="{% if view.obfuscated_source %} encoded-date" data-obfuscated="{{ view.obfuscated_source }}{% endif %}">
-                        {%- if view.source_url -%}
-                            <a href="{{ view.source_url }}">{{ view.source_label }}</a> -
-                        {%- else -%}
-                            {{ view.source_label }}
-                        {%- endif -%}
-                    </span>
-                {% endif -%}
-
-                <time class="{% if view.obfuscated_date %} encoded-date" data-obfuscated="{{ view.obfuscated_date }}{% endif %}" datetime="{{ view.date_last_modified | format_date('iso8601') }}">
-                    {{- view.date_last_modified | format_date(view.show_date_format) -}}
-                </time>
-
-                {# itemprop and "Keine Kommentare. Diskutieren Sie mit." will be rendered on the page bottom via Comment Module.#}
-                {% if view.comments and view.comments.comment_count %}
-                    <span>{{ view.comments.headline }}</span>
+                {% if view.comments %}
+                    <span><a href="#comments" class="metadata__link">{{ view.comments.headline }}</a></span>
                 {% endif %}
 
-                <div class="sharing-menu sharing-menu--inline sharing-menu--on-video-article">
-                    <span class="sharing-menu__title js-sharing-menu">Teilen</span>
+                <div class="sharing-menu sharing-menu--video">
+                    <span class="sharing-menu__title metadata__link js-sharing-menu">Teilen</span>
                     {% include "zeit.web.site:templates/inc/article/sharing-menu-items.tpl" %}
                 </div>
 
