--- a/src/zeit/web/site/templates/content.html
+++ b/src/zeit/web/site/templates/content.html
@@ -55,6 +55,9 @@
     {% profile %}
         {% block article_body %}
         <div class="article-body" itemprop="articleBody">
+            {% block article_main_image %}
+                {{ blocks['image'](view.main_image_block)}}
+            {% endblock article_main_image %}
             {% block article_pages %}
                 <!-- Here goes the content for a page -->
             {% endblock article_pages %}
