--- a/src/zeit/web/site/templates/video.html
+++ b/src/zeit/web/site/templates/video.html
@@ -14,6 +14,11 @@
         {{ vima.brightcove_video_tag(view.context.__name__, iframe=True, expanded=True) }}
 
         {{ self.schema_org_image_info() }}
+
+        {% if view.context.advertising_enabled %}
+            {{ lama_core.adplace(view.banner(7), view) }}
+        {% endif %}
+
         {{ self.article_heading() }}
 
         <div class="article__item">
