--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -34,6 +34,12 @@
     {%- endif %}
 {% endblock article_google_ad %}
 
+{% block article_main_image %}
+    {% if view.page_nr == 1 %}
+        {{ blocks['image'](view.main_image_block)}}
+    {% endif %}
+{% endblock article_main_image %}
+
 {% block article_pagination %}
     {% include "zeit.web.site:templates/inc/article/pagination.tpl" ignore missing %}
 {% endblock article_pagination %}
