ZON-1765: cleanup Styling, fix margins for article__item, write tests for ads on video single pages

--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -64,6 +64,8 @@ $color-button-bg:           $white
 $color-button-bg--hover:    $grey--light
 $color-button-bg--disabled: $zon-seashell
 
+$color-video-background: 	#33333A
+
 //mobile navigation bar globals
 $zon-bar-height-phablet-px: 54px
 $zon-bar-height-phablet: em($zon-bar-height-phablet-px)
