--- a/sass/web.site/modules/video/_video-stage.sass
+++ b/sass/web.site/modules/video/_video-stage.sass
@@ -1,5 +1,5 @@
 .video-stage
-	background-color: #33333A
+	background-color: $color-video-background
 	color: $grey--light
 	font-family: $font-tabletgothic
 	margin: 0 (-$page-padding) remify($small--px) (-$page-padding)
