--- a/sass/web.site/modules/teaser/_teaser-square.sass
+++ b/sass/web.site/modules/teaser/_teaser-square.sass
@@ -19,6 +19,7 @@ $layout: ".teaser-square"
 		position: absolute
 		top: 0
 		width: 100%
+		height: 100%
 	&__media-container
 		+teaser-image-dark-overlay($angle: 0deg)
 	&__media-item
