--- a/src/zeit/web/site/templates/inc/area/topic.html
+++ b/src/zeit/web/site/templates/inc/area/topic.html
@@ -4,9 +4,7 @@
     {% set module = area.values()[:1][0] %}
     {% set teaser = module | first_child %}
     {% set module_layout = 'teaser-topic-main' %}
-    {% include
-        ["zeit.web.site:templates/inc/teaser_asset/image_zon-topic.tpl",
-         "zeit.web.site:templates/inc/teaser_asset/{}_zon-topic.tpl".format(teaser | auto_select_asset | block_type)] ignore missing with context %}
+    {% include "zeit.web.site:templates/inc/teaser_asset/imagegroup_zon-topic.tpl" ignore missing with context %}
     {% include
         ["zeit.web.site:templates/inc/teaser/zon-topic-main.tpl",
          "zeit.web.site:templates/inc/teaser/default.tpl"] ignore missing with context %}
