--- a/src/zeit/web/magazin/templates/inc/headers/article_header_traum.html
+++ b/src/zeit/web/magazin/templates/inc/headers/article_header_traum.html
@@ -13,9 +13,7 @@
         <span class="article__head__meta-wrap is-constrained">
             <span class="article__head__meta">
                 <div class="article__head__meta__offset">
-                    {% if view.genre -%}
-                        {{view.genre}}
-                    {%- endif %}
+                    {{ view.genre | hide_none }}
                     {{ blocks.meta_author(view.authors) }}
                 </div>
                 {% include "zeit.web.magazin:templates/inc/article_area_date.html" ignore missing %}
