--- a/src/zeit/web/site/templates/inc/navigation/login-state.html
+++ b/src/zeit/web/site/templates/inc/navigation/login-state.html
@@ -15,7 +15,7 @@
     {% endif %}
     <span class="login-state-mobile__name">{{ user.name }}</span>
     <a href="{{ logout }}" rel="nofollow" class="login-state-mobile__logoff">
-        <span>Abmelden</span>
+        Abmelden
         {{ lama_core.use_svg_icon('navigation-login', 'login-state-mobile__icon', request) }}
     </a>
 </div>
