--- a/sass/web.site/modules/_nav.sass
+++ b/sass/web.site/modules/_nav.sass
@@ -384,11 +384,11 @@ $user-picture-diameter: remify(45px)
 		height: $login-icon-height
 		margin: remify(0 0 -2px 8px)
 	&__logoff
-		text-transform: uppercase
 		white-space: nowrap
 		+link-colors($zon-grey, $zon-grey, $zon-grey, $zon-grey, $zon-grey)
 	&__name
 		font-weight: 700
+		line-height: normal
 		max-height: $user-picture-diameter
 		overflow: hidden
 		text-overflow: ellipsis
