ZON-1634: column header: remove padding

--- a/sass/web.site/modules/article/_column-heading.sass
+++ b/sass/web.site/modules/article/_column-heading.sass
@@ -11,8 +11,8 @@
 	&__lower
 		background-color: $cararra
 		padding: remify(36px) $page-padding
-		+respond-min($break-phablet-min)
-			padding: remify(48px 36px)
+		// +respond-min($break-phablet-min)
+		// 	padding: remify(48px 36px)
 
 	&__inner
 		position: relative
