--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -47,6 +47,8 @@
 @import "modules/centerpage/snapshot"
 @import "modules/centerpage/dynamic-cp-header"
 @import "modules/centerpage/newsticker"
+@import "modules/centerpage/ressort-heading"
+@import "modules/centerpage/gallery"
 
 // video-stage
 @import "modules/video/video-stage"
