--- a/sass/web.site/modules/article/_column-heading.sass
+++ b/sass/web.site/modules/article/_column-heading.sass
@@ -25,13 +25,13 @@
 
 	&__information
 		+font-smoothing
-		padding: remify(10px 0 50px 0)
+		padding: remify(20px 0 50px 0)
 		vertical-align: middle
 		+respond-max($break-phablet-min)
 			position: relative
 			z-index: 1
 		+respond-min($break-phablet-min)
-			padding: remify(30px 0 40px 0)
+			padding: remify(40px 0 40px 0)
 			width: 65%
 		+respond-min($break-tablet-min)
 			width: 70%
@@ -68,7 +68,7 @@
 		display: block
 		color: $charcoal
 		letter-spacing: $zon-letter-spacing-m
-		margin-bottom: reimfy(3px)
+		margin-bottom: remify(4px)
 		font-size: remify(16px)
 
 	&__title
