--- a/sass/web.site/modules/article/_column-heading.sass
+++ b/sass/web.site/modules/article/_column-heading.sass
@@ -60,6 +60,9 @@
 		position: relative
 		overflow: hidden
 
+	&__media-item
+		width: 100%
+
 	&__header
 		margin-top: remify(0.25em)
 		margin-bottom: remify(0.25em)
