Quickfix: Display blog name and kicker in one line

--- a/sass/web.site/modules/teaser/_teaser-blog.sass
+++ b/sass/web.site/modules/teaser/_teaser-blog.sass
@@ -13,6 +13,7 @@
 		display: inline
 	&__combined-link
 		@extend %teaser-combined-link
+		display: inline
 	&__marker
 		display: inline
 		color: $zon_dark_grey
