--- a/src/zeit/web/site/templates/inc/area/news.html
+++ b/src/zeit/web/site/templates/inc/area/news.html
@@ -12,8 +12,8 @@
             {% set teaser = module | first_child %}
             <article class="newsteaser">
                 <time class="newsteaser__time">
-                    {{ teaser | mod_date | format_date('time_only') | truncate(5, True, '') | hide_none }}
-</time>
+                    {{ teaser | mod_date | format_date(pattern='HH:mm') }}
+                </time>
                 <div class="newsteaser__text">
                     <a class="newsteaser__combined-link" title="{{
                         teaser.teaserSupertitle or teaser.supertitle |
