--- a/src/zeit/web/site/templates/centerpage.html
+++ b/src/zeit/web/site/templates/centerpage.html
@@ -10,15 +10,23 @@ Available attributes:
 
 {% block metadata %}
     <div class="header__metadata">
-        {% if view.topic_links | length %}
+    {% if view.topic_links | length %}
         <div class="header__tags">
             <span class="header__tags__label">{{ view.topic_links.title | hide_none }}</span>
             {% for label, link in view.topic_links %}
             <a href="{{ link }}" title="{{ label }}" class="header__tags__link">{{ label }}</a>
             {% endfor %}
         </div>
+    {% endif %}
+
+    {% if view.is_hp %}
+        {% set date = view.date_last_modified | format_timedelta(hours=3) %}
+        {% if date %}
+        <div class="header__date">
+            <time datetime="{{ view.date_last_modified | format_date('iso8601') }}">Aktualisiert {{ date }}</time>
+        </div>
         {% endif %}
-        <div class="header__date">{{ view.displayed_last_published_semantic | format_date('long') }}</div>
+    {% endif %}
     </div>
 {% endblock metadata %}
 
